# qliplab

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  PRODUCT.md  README.md  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-windows.yml  ci.yml  claude-code.yml  release.yml
docs/: ANALYSIS.md  ARCHITECTURE.md  COMPONENTS.md  DATA_MODELS.md  DEVELOPMENT.md  DOMAIN.md  FEATURES.md  INSTALL.md  PROGRESS.md  PUBLISHING.md  REPORTING.md  SECURITY.md  STORES.md  TAURI.md  UX_REVIEW.md  privacy-policy.html  valtown-consent-endpoint.ts
docs/prompts/: FEATURE_GITHUB_ISSUES.md  PHASE_2.md  PHASE_3.md  PHASE_5.md  PHASE_6.md  PHASE_8.md
prompts/: COMMON.md  PHASE_1.md  PHASE_4.md  PHASE_7.md
scripts/: bump-version.sh  demo-data.sql  prepare-screenshots.mjs
scripts/valtown/: consent-log.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: AppxManifest.xml  Cargo.toml  Entitlements.plist  Info.plist  PrivacyInfo.xcprivacy  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ErrorBoundary.tsx
src/components/feedback/: ErrorReportingOptIn.tsx  ReportIssueDialog.tsx
src/components/history/: CommandResultRow.tsx  FormatIcon.tsx  HistoryItem.tsx  HistoryList.tsx  ItemMenu.tsx
src/components/icons/: QlipLabIcon.tsx
src/components/layout/: AccessibilityBanner.tsx  CapturePausedBanner.tsx  CrossTabSearchHints.tsx  DragBar.tsx  HintBar.tsx  OnboardingBanner.tsx  ResizeBorder.tsx  SearchBar.tsx  Sidebar.tsx  Splitter.tsx  TabBar.tsx  WelcomeWizard.test.tsx  WelcomeWizard.tsx  WindowControls.tsx  WindowHeader.tsx
src/components/legal/: EulaDialog.tsx  EulaViewerDialog.tsx
src/components/preview/: DiffView.tsx  (+5 more)
src/hooks/: useAutostart.ts  useClipboardListener.ts  useDiffMode.test.ts  useDiffMode.ts  useGlobalShortcut.ts  useKeyboardNavigation.test.ts  useKeyboardNavigation.ts  useModifierHeld.test.ts  useModifierHeld.ts  useTheme.ts  useTriggerEngine.ts
src/i18n/: index.ts
src/lib/: ai.ts  aiError.test.ts  aiError.ts  aiProvider.test.ts  autoLock.test.ts  autoLock.ts  capabilities.test.ts  capabilities.ts  clipboardSkip.test.ts  clipboardSkip.ts  commandBar.test.ts  commandBar.ts  config.test.ts  config.ts  consentLog.ts  countries.ts  database.test.ts  database.ts  diff.ts  dismiss.test.ts  dismiss.ts  encryption.test.ts  encryption.ts  errorReporter.test.ts  errorReporter.ts  eula.ts  exportImport.ts  formatDetector.test.ts  formatDetector.ts  formatShortcut.test.ts  formatShortcut.ts  fuzzySearch.test.ts  fuzzySearch.ts  imageUtils.ts  keyboardNav.test.ts  keyboardNav.ts  license.test.ts  license.ts  listWidth.test.ts  listWidth.ts  (+37 more)
src/stores/: appStore.test.ts  appStore.ts  feedbackStore.ts  historyStore.ts  licenseStore.ts  permissionStore.ts  previewStore.test.ts  previewStore.ts  settingsStore.ts  snippetStore.test.ts  snippetStore.ts  tagStore.ts  vaultStore.changePassword.test.ts  vaultStore.ts
src/types/: clipboard.ts  database.ts  license.ts  snippet.ts  vault.ts
worker/: README.md  package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
worker/src/: index.ts
(+37 files in other folders)
